Basic work on switching to java9 (test failures)