@@ -217,8 +217,8 @@
 	<properties>
 		<wicket.version>9.0.0-SNAPSHOT</wicket.version>
 
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.9</maven.compiler.source>
+		<maven.compiler.target>1.9</maven.compiler.target>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -1055,7 +1055,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.0</version>
 					<configuration>
 						<archive>
 							<index>true</index>
@@ -1085,13 +1085,13 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.18.1</version>
+					<version>2.21.0</version>
 					<configuration>
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
 						<testFailureIgnore>false</testFailureIgnore>
-						<argLine>-Xmx1024m</argLine>
+						<argLine>-Xmx1G --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-modules=ALL-SYSTEM</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
